[Fix] Dark mode bug

--- a/src/Components/SearchBar/SearchBar.css
+++ b/src/Components/SearchBar/SearchBar.css
@@ -31,7 +31,7 @@
 .cityContainer {
   position: absolute;
   width: 100%;
-  background: var(--color-highlight);
+  background: var(--color-search-bg);
   margin-top: 1px;
   border-radius: 10px;
   box-shadow: 0 1px 6px 0 rgba(32, 33, 36, 0.28);
@@ -49,7 +49,7 @@
 }
 
 .cityData:hover {
-  background: var(--color-bg);
+  background: var(--color-highlight);
 }
 
 .cityWeather {
